# astra

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
axgen/: CMakeLists.txt  install.sh
axgen/src/: args.cpp  args.hpp  args.test.cpp  cook.cpp  cook.hpp  cook.test.cpp  main.cpp  project-bootstrap.cpp  project-bootstrap.hpp  project-locator.cpp  project-locator.hpp  project-locator.test.cpp  project-serializer.cpp  project-serializer.hpp  project-serializer.test.cpp  sync.cpp  sync.hpp  sync.test.cpp  watch.cpp  watch.hpp
axslc/: CMakeLists.txt  args.cpp  args.hpp  args.test.cpp  install.sh  main.cpp  output.cpp  output.hpp  output.test.cpp
examples/sandbox/: .gitignore  CMakeLists.txt
examples/sandbox/assets/materials/: brick.axmaterial
examples/sandbox/assets/terrain/: highland.axterrain
examples/sandbox/src/: editor-loader.cpp  editor-loader.hpp  main.cpp  project.ax  project_manifest.json  render-passes-loader.cpp  render-passes-loader.hpp  sandbox-loader.cpp  sandbox-loader.hpp  sandbox-module-entry.cpp
examples/sandbox/src/scenes/: prologue.cpp  prologue.hpp
examples/sandbox/src/shared/: spawn.cpp  spawn.hpp
src/modules/application/: CMakeLists.txt  application-plugin-registry.cpp  application-plugin-registry.hpp  application.cpp  application.hpp
src/modules/audio/: CMakeLists.txt  audio-commands.cpp  audio-commands.hpp
src/modules/audio/backend/: audio-backend.cpp  audio-backend.hpp
src/modules/audio/components/: audio-emitter.hpp  audio-listener.hpp
src/modules/audio/graph/: audio-frame.hpp  audio-graph.cpp  audio-graph.hpp  audio-pass.hpp
src/modules/audio/resources/: audio-clip.hpp
src/modules/audio/systems/: audio-system.cpp  audio-system.hpp
src/modules/editor/: CMakeLists.txt  builtin-plugins.cpp  builtin-plugins.hpp  context-tool-registry.cpp  context-tool-registry.hpp  editor-camera-navigation-store.cpp  editor-camera-navigation-store.hpp  editor-context-store.cpp  editor-context-store.hpp  editor-gizmo-store.hpp  editor-module-entry.cpp  editor-selection-store.cpp  editor-selection-store.hpp  editor-theme.hpp  editor-viewport-hud-store.cpp  editor-viewport-hud-store.hpp  editor-viewport-navigation-store.cpp  editor-viewport-navigation-store.hpp
src/modules/editor/UI/: imgui-widgets.hpp
src/modules/editor/commands/: builtin-editor-commands.cpp  builtin-editor-commands.hpp
src/modules/editor/layers/: console-layer.cpp  properties-layer.cpp
src/modules/editor/layouts/: layout-node.hpp  layout-registry.cpp  layout-registry.hpp
src/modules/editor/panels/: panel-controller.hpp  panel-registry.cpp  panel-registry.hpp
src/modules/editor/serializers/: log-serializer.cpp
src/modules/editor/systems/: workspace-shell-system-camera.cpp  workspace-shell-system-gizmo.cpp  workspace-shell-system-helpers.cpp  workspace-shell-system-internal.hpp  workspace-shell-system-layout.cpp  workspace-shell-system-panels.cpp  workspace-shell-system-root.cpp  workspace-shell-system-state.cpp  workspace-shell-system-workspace.cpp  workspace-shell-system.cpp  workspace-shell-system.hpp
src/modules/editor/workspaces/: workspace-definition.hpp  workspace-registry.cpp  workspace-registry.hpp  workspace-store.cpp  workspace-store.hpp  workspace-ui-store.cpp  workspace-ui-store.hpp
src/modules/engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/modules/jobs/: CMakeLists.txt
src/modules/renderer/: CMakeLists.txt  framebuffer.cpp  framebuffer.hpp  index-buffer.cpp  index-buffer.hpp  render-bindings.hpp  renderer-api.cpp  renderer-api.hpp  storage-buffer.cpp  storage-buffer.hpp  vertex-array.cpp  vertex-array.hpp  vertex-buffer.cpp  vertex-buffer.hpp  virtual-framebuffer.cpp  virtual-framebuffer.hpp  virtual-index-buffer.cpp  virtual-index-buffer.hpp  virtual-shader.cpp  virtual-shader.hpp  virtual-storage-buffer.cpp  virtual-storage-buffer.hpp  virtual-texture2D.cpp  virtual-texture2D.hpp  virtual-texture3D.cpp  virtual-texture3D.hpp  virtual-vertex-array.cpp  virtual-vertex-array.hpp  virtual-vertex-buffer.cpp  virtual-vertex-buffer.hpp
src/modules/renderer/components/: camera.hpp  lens-flare.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  render-resource-request.hpp  skybox.hpp  tags.hpp  text.hpp  transform.hpp
src/modules/renderer/entities/: camera.cpp  camera.hpp  derived-entity-id.hpp  derived-override.cpp  derived-override.hpp  object.cpp  object.hpp  overlay.hpp  post-processing.cpp  post-processing.hpp  scene-build-context.hpp  scene.cpp  scene.hpp  skybox.cpp  skybox.hpp  text.cpp  text.hpp
src/modules/renderer/importers/: model-importer.cpp  model-importer.hpp
src/modules/renderer/managers/: debug-draw-store.hpp  resource-manager.cpp  resource-manager.hpp  scene-manager.cpp  scene-manager.hpp
src/modules/renderer/resources/: equirectangular-converter.cpp  equirectangular-converter.hpp  font.cpp  font.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh.test.cpp  model.cpp  model.hpp  resource.hpp  shader.cpp  shader.hpp  shader.test.cpp  svg-compiler.hpp  svg.cpp  svg.hpp  svg.test.cpp  terrain-recipe.hpp  texture.cpp  texture.hpp
src/modules/renderer/shader-lang/: CMakeLists.txt  ast.hpp  compiler.cpp  compiler.hpp  compiler.test.cpp  (+18 more)
src/modules/streams/: CMakeLists.txt  context-proxy.cpp  context-proxy.hpp  serialization-context-readers.hpp  serialization-context.cpp  serialization-context.hpp  serialization-formats.cmake  serialized-fields.hpp  serializer.cpp  stream-buffer.hpp
src/modules/terrain/: CMakeLists.txt
src/modules/ui/: CMakeLists.txt  clipboard.test.hpp  disclosure.hpp  disclosure.test.hpp  document.cpp  document.hpp  document.test.hpp  dsl.hpp  foundations.hpp  foundations.test.hpp  graph-view.test.hpp  immediate.hpp  layout.cpp  layout.hpp  layout.test.hpp  text-metrics.hpp  types.hpp  ui-foundations.test.hpp  virtual-list.hpp  virtual-list.test.hpp
tests/: CMakeLists.txt  main.cpp  model-stub.cpp  project-serializer-stub.cpp  ui-layout-renderer-stub.cpp
tests/helpers/: random.hpp
tests/stubs/: renderer-stubs.cpp
tests/tools/: shader-glsl-corpus-snapshot.cpp
(+1431 files in other folders)
